--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 mpremote = "^1.22.0"
+ruff = "^0.4.4"
+freetype-py = "^2.4.0"
 
 
 [build-system]
